// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides its child if direction is backward 1`] = `
<View
  collapsable={false}
  pointerEvents="none"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00000050",
      "bottom": 0,
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    collapsable={false}
    style={Object {}}
  />
</View>
`;

exports[`shows its child if direction changed to forward 1`] = `
<View
  collapsable={false}
  pointerEvents="auto"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00000050",
      "bottom": 0,
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    collapsable={false}
    style={Object {}}
  >
    <Text
      testID="child"
    >
      I should be rendered
    </Text>
  </View>
</View>
`;

exports[`shows its child if direction is forward 1`] = `
<View
  collapsable={false}
  pointerEvents="auto"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00000050",
      "bottom": 0,
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    collapsable={false}
    style={Object {}}
  >
    <Text
      testID="child"
    >
      I should be rendered
    </Text>
  </View>
</View>
`;

exports[`snapshots component when direction changed to backward 1`] = `
<View
  collapsable={false}
  pointerEvents="auto"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00000050",
      "bottom": 0,
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    collapsable={false}
    style={Object {}}
  >
    <Text
      testID="child"
    >
      I should not be rendered
    </Text>
  </View>
</View>
`;
